deployments/homelab/cloud/services/24-unifi/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi
  namespace: unifi
  labels:
    app.kubernetes.io/name: unifi
spec:
  ports:
    - name: https
      port: 8443
      targetPort: 8443
    - name: node-metrics
      port: 9100
      targetPort: 9100
    - name: ap-metrics
      port: 9130
      targetPort: 9130
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: unifi
  namespace: unifi
  labels:
    kubernetes.io/service-name: unifi
    endpointslice.kubernetes.io/managed-by: infra.fahrican.com
addressType: IPv4
ports:
  - name: https
    protocol: TCP
    port: 8443
  - name: node-metrics
    protocol: TCP
    port: 9100
  - name: ap-metrics
    protocol: TCP
    port: 9130
endpoints:
  - addresses: [192.168.80.12]
    conditions:
      ready: true
---
# The Prometheus installation uses Endpoints discovery for external targets.
apiVersion: v1
kind: Endpoints
metadata:
  name: unifi
  namespace: unifi
  labels:
    endpointslice.kubernetes.io/skip-mirror: 'true'
subsets:
  - addresses:
      - ip: 192.168.80.12
    ports:
      - name: node-metrics
        port: 9100
      - name: ap-metrics
        port: 9130
